--- a/css/main.css
+++ b/css/main.css
@@ -356,9 +356,9 @@ nav.main-menu ul li a:hover {
 }
 
 .about-thum-area .about-img {
-    height: 395px;
+    height: 100%;
     position: relative;
-    width: 300px;
+    width: 85%;
     z-index: 1;
 }
 
